# smart-camera-analytics

./: .env.example  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py
src/: __init__.py  __main__.py  alerts.py  api.py  behavior_analyzer.py  core.py  detector.py  health.py  stream_processor.py  tracker.py  utils.py  videoanalyzer.py  zone_manager.py
tests/: test_api.py  test_basic.py  test_benchmark.py  test_core.py  test_integration.py  test_videoanalyzer.py
