[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smart-camera-analytics"
version = "0.1.0"
description = "Real-time video analytics with object detection and tracking"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.0", "fastapi>=0.110.0", "uvicorn>=0.27.0", "anthropic>=0.39.0", "openai>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.3.0"]
